Closed
Bug 251064
Opened 22 years ago
Closed 22 years ago
Hang when displaying a page where several identical entries exist in password manager
Categories
(Toolkit :: Password Manager, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: coffeebreaks, Assigned: bryner)
References
()
Details
(Keywords: fixed-aviary1.0)
Attachments
(2 files)
|
269 bytes,
text/plain
|
Details | |
|
1.35 KB,
patch
|
mconnor
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040708 Firefox/0.9.1
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7) Gecko/20040708 Firefox/0.9.1
I am not 100% sure of the reason, but the problem appeared with firebird 0.9.
It hangs when I try to display any story from mozillazine. I have no problem
with the suite (identical settings).
One thing that is important is that I imported settings from mozilla suite (1.7).
The other important thing is that in mozilla suite, password manager failed to
appropriately register passwords on mozillazine. Each time I post an issue, it
will add a new entry in the password manager, with the same login name and password.
Reproducible: Always
Steps to Reproduce:
1. Go to mozzilazine
2. Page is sometimes loaded (but hasn't time to be displayed) or page sometimes
appear. In that case form appears but is not filled up
Actual Results:
100% CPU hang
I am not sure the problem relates to password management. But it seems like it
is. Mozillazine worked like a charm before.
I've never had a problem with mozilla suite on that site.
I've never had a problem with firebird on other sites.
I've removed all my extensions but it is still there. I will try cleaning my
password entries to check if this is a problem.
| Reporter | ||
Comment 1•22 years ago
|
||
I've backed up my .s password file, removed duplicate entries from the Firebird
privacy UI and now it works by a charm. I've had more than 10 hangs before, and
reported the problem on different chat and forums, but nobody managed to
reproduce it.
So I can confirm the problem is password related. I will try to reduce the test
case.
| Reporter | ||
Comment 2•22 years ago
|
||
| Reporter | ||
Comment 3•22 years ago
|
||
#firefox extract with mconnor
mconnor:
based on my knowledge of satchel vs. wallet, its not possible in satchel. So I
guess we don't have code that deals well with fucked up stuff we import from
wallet ;( hmm
CoffeeBreaks_
so it's an import problem?
mconnor:
yes/no we could fix it on import or we could handle it better in satchel. not
sure what's "better"
CoffeeBreaks_
at least you have a test case now
mconnor
also, wallet shouldn't do this either, so it could just be you ;)
| Assignee | ||
Comment 4•22 years ago
|
||
I think the hang here actually is because of the named elements not existing in
the form for some of the saved logins. There's a little bug with handing of an
unsigned int that can cause it to loop infinitely in that case.
Status: NEW → ASSIGNED
| Assignee | ||
Comment 5•22 years ago
|
||
A couple of fixes for password field searching -- first, when searching forward
we can start at index + 1, since we already know the control at |index| is a
text input, and therefore not a password input. Same applies when going
backwards, we can start at index - 1. And the real fix for the hang is to
change the loop since an unsigned is always >= 0.
| Assignee | ||
Updated•22 years ago
|
Attachment #153641 -
Flags: review?(mconnor)
Comment 6•22 years ago
|
||
Attachment #153641 -
Flags: review?(mconnor) → review+
| Assignee | ||
Comment 7•22 years ago
|
||
checked in.
Updated•18 years ago
|
Product: Firefox → Toolkit
You need to log in
before you can comment on or make changes to this bug.
Description
•