Fix hang when a form control name saved in password manager is not present in the form.  Bug 251064, r=mconnor